# functional-data-structures

./: CMakeLists.txt  functional_data.org
include/functional_data_structures/: leftist_heap.hpp
include/functional_data_structures/impl/: macs.hpp  pass.hpp
include/functional_data_structures/lowlevel_data/: fam.hpp  macroexpand.hpp  pointer_through_uninit.hpp  static_vector.hpp  uninit.hpp
include/functional_data_structures/memory/: concepts.hpp  shared_ptr_mem.hpp
test/: CMakeLists.txt  early_hook.cmake
